--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif, Lusitana ;
 }
 
 a {
@@ -17,4 +17,9 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.logo-container{
+  background-color: rgb(30, 115, 206);
+  padding: 10px;
 }
